--- a/Grocery_Stpre_With_IMG/MainWindow.xaml
+++ b/Grocery_Stpre_With_IMG/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Grocery_Stpre_With_IMG.MainWindow"
+﻿<Window x:Class="Grocery_Store_With_IMG.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
